feat(build): Build & deployment pipeline for AWS

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,12 +31,12 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: PROJECT_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: PROJECT_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: PROJECT_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: PROJECT_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: PROJECT_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: PROJECT_CONTAINER_NAME           # set this to the name of the container in the containerDefinitions section of your task definition
+  AWS_REGION: ${{ vars.PROJECT_AWS_REGION }}              # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: ${{ PROJECT_ECR_REPOSITORY }}           # set this to your Amazon ECR repository name
+  ECS_SERVICE: ${{ PROJECT_ECS_SERVICE }}                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: ${{ PROJECT_ECS_CLUSTER }}                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: ${{ PROJECT_ECS_TASK_DEFINITION }} # set this to the path to your Amazon ECS task definition file, e.g. .aws/task-definition.json
+  CONTAINER_NAME: ${{ PROJECT_CONTAINER_NAME }}           # set this to the name of the container in the containerDefinitions section of your task definition
 
 permissions:
   contents: read
