--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -43,6 +43,7 @@ permissions:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
@@ -64,6 +65,7 @@ jobs:
           path: '${{ github.workspace }}/target/*.jar'
   deploy:
     name: Deploy
+    needs: build
     runs-on: ubuntu-latest
     environment: production
 
