--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -36,7 +36,7 @@ env:
   ECS_SERVICE: ${{ vars.PROJECT_ECS_SERVICE }}                 # set this to your Amazon ECS service name
   ECS_CLUSTER: ${{ vars.PROJECT_ECS_CLUSTER }}                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ${{ vars.PROJECT_ECS_TASK_DEFINITION }} # set this to the path to your Amazon ECS task definition file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: ${{ vars.PROJECT_CONTAINER_NAME }}           # set this to the name of the container in the containerDefinitions section of your task definition
+  CONTAINER_NAME: ${{ vars.PROJECT_ECS_CONTAINER_NAME }}           # set this to the name of the container in the containerDefinitions section of your task definition
 
 permissions:
   contents: read
