--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -63,6 +63,16 @@ jobs:
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.jar'
+
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_HUB_USER }} -p ${{ secrets.DOCKER_HUB_PASSWORD}}
+
+      - name: Build Docker image
+        run: docker build markash/GymBuddie .
+
+      - name: Publish Docker image to Docker Hub
+        run: docker push markash/GymBuddie:latest
+
   deploy:
     name: Deploy
     needs: build
