--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -68,7 +68,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_HUB_USER }} -p ${{ secrets.DOCKER_HUB_PASSWORD}}
 
       - name: Build Docker image
-        run: docker build markash/GymBuddie .
+        run: docker build . --file Dockerfile --platform linux/amd64 --tag gymbuddie:"$(date +%s)"
 
       - name: Publish Docker image to Docker Hub
         run: docker push markash/GymBuddie:latest
