--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -91,6 +91,9 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
+    - name: List directory
+      run: ls -d */
+
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
