--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -94,6 +94,18 @@ jobs:
     - name: List directory
       run: ls
 
+    - name: Build and push Docker image
+      id: push
+      uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        IMAGE_TAG: ${{ github.sha }}
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
