--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -92,7 +92,10 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v2
 
     - name: List directory
-      run: ls
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        IMAGE_TAG: ${{ github.sha }}
+      run: echo "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
     - name: Build and push Docker image
       id: push
