--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -95,7 +95,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-      run: echo "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+      run: echo "${{ECR_REGISTRY}}/${{ECR_REPOSITORY}}:${{IMAGE_TAG}}"
 
     - name: Build and push Docker image
       id: push
