--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -95,7 +95,8 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-      run: echo "${{ECR_REGISTRY}}/${{ECR_REPOSITORY}}:${{IMAGE_TAG}}"
+        DOCKER_TAG: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      run: echo "$DOCKER_TAG"
 
     - name: Build and push Docker image
       id: push
@@ -103,11 +104,12 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
+        DOCKER_TAG: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
       with:
         context: .
         file: ./Dockerfile
         push: true
-        tags: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        tags: $DOCKER_TAG
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
