--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -90,12 +90,14 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
+      with:
+        registry-type: public
 
     - name: List directory
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
-        DOCKER_TAG: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        DOCKER_TAG: "$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
       run: echo "$DOCKER_TAG"
 
     - name: Build and push Docker image
