--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -90,6 +90,8 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
+      with:
+        registry-type: public
 
     - name: Build and push Docker image
       id: push
@@ -102,7 +104,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: $ECR_REGISTRY/c7r3g6m8/$ECR_REPOSITORY:$IMAGE_TAG
+        tags: $ECR_REGISTRY/c7r3g6m8/mpashworth:gym-buddie:latest
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
