--- a/.github/workflows/main_gymbuddy.yml
+++ b/.github/workflows/main_gymbuddy.yml
@@ -1,15 +1,15 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - gymbuddy
+name: Build & deploy Gym Buddie Server & Client
 
 'on':
   push:
     branches:
       - main
+      - issue-*
   workflow_dispatch:
 
-    null
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
           name: gym-buddie-server
           path: ${{ github.workspace }}/gym-buddie-server/target/*.jar
 
-  deploy:
+  deploy-server:
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -59,13 +59,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D4F785D6ED704383B7E8A11F3278D1BA
-            }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DFE6E3F45A5943B7BBD160135A95B155
-            }}
-          subscription-id: ${{
-            secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6BC2E16AD3324A9E869A0F0BDF5A1ECC
-            }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D4F785D6ED704383B7E8A11F3278D1BA }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DFE6E3F45A5943B7BBD160135A95B155 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6BC2E16AD3324A9E869A0F0BDF5A1ECC }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -73,4 +69,35 @@ jobs:
         with:
           app-name: gym-buddie-server
           slot-name: Production
-          package: '*.jar'
+          package: '*server*.jar'
+
+  deploy-client:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: Production
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
+    steps:
+      - name: Download client artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: gym-buddie-client
+
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_D4F785D6ED704383B7E8A11F3278D1BA }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_DFE6E3F45A5943B7BBD160135A95B155 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6BC2E16AD3324A9E869A0F0BDF5A1ECC }}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: gym-buddie-client
+          slot-name: Production
+          package: '*client*.jar'
