feat(build): Use vite env to retrieve base url to fetch the workouts. Remove Yarn from the Maven build of the client module.

--- a/gym-buddie-ui/package.json
+++ b/gym-buddie-ui/package.json
@@ -32,9 +32,10 @@
   },
   "scripts": {
     "build": "tsc -b && vite build --mode development",
-    "dev": "vite",
+    "dev": "vite --mode production",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "package": "tsc -b && vite build --mode production"
   },
   "browserslist": [
     ">0.2%",
