--- a/.github/workflows/main_gymbuddy.yml
+++ b/.github/workflows/main_gymbuddy.yml
@@ -10,6 +10,18 @@ name: Build & deploy Gym Buddie Server & Client
       - issue-*
   workflow_dispatch:
 
+env:
+  AWS_REGION: ${{ vars.PROJECT_AWS_REGION }}                   # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: ${{ vars.PROJECT_ECR_REPOSITORY }}           # set this to your Amazon ECR repository name
+  ECS_CLUSTER: ${{ vars.PROJECT_ECS_CLUSTER }}                 # set this to your Amazon ECS cluster name
+
+  SERVER_ECS_SERVICE: ${{ vars.SERVER_ECS_SERVICE }}                 # set this to your Amazon ECS service name
+  SERVER_ECS_TASK_DEFINITION: ${{ vars.SERVER_ECS_TASK_DEFINITION }} # set this to the path to your Amazon ECS task definition file, e.g. .aws/task-definition.json
+  SERVER_CONTAINER_NAME: ${{ vars.SERVER_ECS_CONTAINER_NAME }}           # set this to the name of the container in the containerDefinitions section of your task definition
+  ECS_REGISTRY_ALIAS: ${{ vars.PROJECT_ECS_REGISTRY_ALIAS }}
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -39,6 +51,55 @@ jobs:
         with:
           name: gym-buddie-server
           path: ${{ github.workspace }}/gym-buddie-server/target/*.jar
+
+  deploy-aws-server:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: Production
+      url: ${{ steps.build-image.outputs.imageid }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
+
+    steps:
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          registry-type: public
+
+      - name: Build and push server Docker image
+        id: build-image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+        with:
+          context: .
+          file: ./gym-buddie-server/Dockerfile
+          push: true
+          tags: ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+  
+      - name: Echo server image tag
+        id: echo
+        run: echo ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: ${{ env.SERVER_ECS_TASK_DEFINITION }}
+          container-name: ${{ env.SERVER_CONTAINER_NAME }}
+          image: ${{ steps.build-image.outputs.imageid }}
+  
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ env.SERVER_ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
 
   deploy-server:
     runs-on: ubuntu-latest
