--- a/.github/workflows/main_gymbuddy.yml
+++ b/.github/workflows/main_gymbuddy.yml
@@ -63,11 +63,18 @@ jobs:
       contents: read #This is required for actions/checkout
 
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::343218215658:role/devops-github-actions-role
+          aws-region: us-east-1
+
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
         with:
           registry-type: public
+          mask-password: 'false'
 
       - name: Build and push server Docker image
         id: build-image
