--- a/.github/workflows/main_gymbuddy.yml
+++ b/.github/workflows/main_gymbuddy.yml
@@ -78,13 +78,13 @@ jobs:
 
       - name: Build and push server Docker image
         id: build-image
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        uses: docker/build-push-action@v6
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         with:
           context: .
-          file: ./gym-buddie-server/Dockerfile
+          file: ${{ github.workspace }}/gym-buddie-server/Dockerfile
           push: true
           tags: ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
   
