--- a/.github/workflows/main_gymbuddy.yml
+++ b/.github/workflows/main_gymbuddy.yml
@@ -23,6 +23,28 @@ permissions:
   contents: read
 
 jobs:
+
+  authenticate:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    outputs:
+      ECS_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::343218215658:role/GitHubAction-AssumeRoleWithAction
+          aws-region: us-east-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          registry-type: public
+          mask-password: 'false'
+          
   build:
     runs-on: ubuntu-latest
     permissions:
@@ -51,47 +73,23 @@ jobs:
         with:
           name: gym-buddie-server
           path: ${{ github.workspace }}/gym-buddie-server/target/*.jar
-
-  deploy-aws-server:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: Production
-      url: ${{ steps.build-image.outputs.imageid }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::343218215658:role/GitHubAction-AssumeRoleWithAction
-          aws-region: us-east-1
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-        with:
-          registry-type: public
-          mask-password: 'false'
-
-      - name: Build and push server Docker image
+          
+      - name: Build and push server container image
         id: build-image
         uses: docker/build-push-action@v6
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry  }}
           IMAGE_TAG: ${{ github.sha }}
         with:
           context: .
           file: ${{ github.workspace }}/gym-buddie-server/Dockerfile
           push: true
           tags: ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-  
+      
       - name: Echo server image tag
         id: echo
         run: echo ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-
+      
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
@@ -99,7 +97,7 @@ jobs:
           task-definition: ${{ env.SERVER_ECS_TASK_DEFINITION }}
           container-name: ${{ env.SERVER_CONTAINER_NAME }}
           image: ${{ steps.build-image.outputs.imageid }}
-  
+
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
@@ -107,6 +105,7 @@ jobs:
           service: ${{ env.SERVER_ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
+
 
   deploy-server:
     runs-on: ubuntu-latest
