--- a/.github/workflows/main_gymbuddy.yml
+++ b/.github/workflows/main_gymbuddy.yml
@@ -47,6 +47,7 @@ jobs:
           
   build:
     runs-on: ubuntu-latest
+    needs: authenticate
     permissions:
       contents: read #This is required for actions/checkout
 
