feat(build): Grant the authenticate step the íd-token' permission.

--- a/.github/workflows/main_gymbuddy.yml
+++ b/.github/workflows/main_gymbuddy.yml
@@ -27,6 +27,7 @@ jobs:
   authenticate:
     runs-on: ubuntu-latest
     permissions:
+      id-token: write #This is required for requesting the JWT
       contents: read
     outputs:
       ECS_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
