--- a/.github/workflows/main_gymbuddy.yml
+++ b/.github/workflows/main_gymbuddy.yml
@@ -101,27 +101,23 @@ jobs:
           docker tag com.github.markash/dev-ecr-repo:latest public.ecr.aws/u5b3x2m3/com.github.markash/dev-ecr-repo:latest
           docker push public.ecr.aws/u5b3x2m3/com.github.markash/dev-ecr-repo:latest
           
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest -f ${{ github.workspace }}/gym-buddie-server
-          docker buildx push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker buildx push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          
-      - name: Build and push server container image
-        id: build-image
-        uses: docker/build-push-action@v6
-        env:
-          ECR_REGISTRY: ${{ needs.authenticate.outputs.ecr_registry }}
-          IMAGE_TAG: ${{ github.sha }}
-        with:
-          context: ${{ github.workspace }}/gym-buddie-server
-          file: ${{ github.workspace }}/gym-buddie-server/Dockerfile
-          push: true
-          tags: ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+      # - name: Build and push server container image
+      #   id: build-image
+      #   uses: docker/build-push-action@v6
+      #   env:
+      #     ECR_REGISTRY: ${{ needs.authenticate.outputs.ecr_registry }}
+      #     IMAGE_TAG: ${{ github.sha }}
+      #   with:
+      #     context: ${{ github.workspace }}/gym-buddie-server
+      #     file: ${{ github.workspace }}/gym-buddie-server/Dockerfile
+      #     push: true
+      #     tags: ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
       
-      - name: Echo server image tag
-        id: echo
-        env:
-          ECR_REGISTRY: ${{ needs.authenticate.outputs.ecr_registry }}
-        run: echo ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+      # - name: Echo server image tag
+      #   id: echo
+      #   env:
+      #     ECR_REGISTRY: ${{ needs.authenticate.outputs.ecr_registry }}
+      #   run: echo ${{ env.ECR_REGISTRY }}/${{ env.ECS_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
       
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
@@ -129,7 +125,7 @@ jobs:
         with:
           task-definition: ${{ env.SERVER_ECS_TASK_DEFINITION }}
           container-name: ${{ env.SERVER_CONTAINER_NAME }}
-          image: ${{ steps.build-image.outputs.imageid }}
+          image: public.ecr.aws/u5b3x2m3/com.github.markash/dev-ecr-repo:latest
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
